Closed Bug 1667668 Opened 4 years ago Closed 4 years ago

Download section of https://www.resilio.com/individuals/ has broken layout in Nightly 83

Categories

(Core :: Layout: Flexbox, defect, P1)

Firefox 83
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- unaffected
firefox82 --- unaffected
firefox83 --- fixed

People

(Reporter: lolrepeatlol, Assigned: TYLin)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:83.0) Gecko/20100101 Firefox/83.0

Steps to reproduce:

I went to https://www.resilio.com/individuals/.

Actual results:

The Downloads section of the website showed a broken "Desktop Downloads" layout, with a stretched Tux and text not being where it's supposed to be.

Expected results:

The layout should have been normal, like it is in Beta, with no stretched Tux and text in the correct places.

Note: this happens in a fresh profile as well.

This has been occurring for a few days (sorry for not reporting earlier) but just in case it's still of interest, here's my build ID: 20200927094310.

Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1316534

Assignee: nobody → aethanyc
Severity: -- → S3
Component: Untriaged → Layout: Flexbox
Flags: needinfo?(aethanyc)
Priority: -- → P1
Product: Firefox → Core
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

flex-aspect-ratio-img-row-012.html is the test failed without this
patch. flex-aspect-ratio-img-column-016.html is added for symmetry (Note
column-012.html to column-015.html is occupied in upstream).

Depends on D91678

I ran into what I think is this same issue at https://www.amazon.com/stores/Guardian+Drain+Lock/page/CAD6696C-DD42-4A1A-B8C2-DB2D20425689

If you scroll down about 2/3 of the way, there are some wide listings whose "Prime" logos (to the right of their star-ratings) are stretched in Nightly, I think due to this bug. (There's a max-width on those logos, and the stretching goes away if I remove it in devtools.)

Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/ac64a4e5582b Part 1 - Add verbose flex log to print various size suggestions. r=dholbert https://hg.mozilla.org/integration/autoland/rev/55175b2bbcf8 Part 2 - Use main max size to clamp specified size suggestion only if main size is definite. r=dholbert
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/25844 for changes under testing/web-platform/tests
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: