Bug 1667668 Part 2 - Use main max size to clamp specified size suggestion only if main size is definite. r=dholbert

flex-aspect-ratio-img-row-012.html is the test failed without this
patch. flex-aspect-ratio-img-column-016.html is added for symmetry (Note
column-012.html to column-015.html is occupied in upstream).

Differential Revision: https://phabricator.services.mozilla.com/D91679